--- a/index.html
+++ b/index.html
@@ -13178,7 +13178,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20211209094659844" list="Hello [[Current and Recent Work]] [[Selected Works]] [[Site updates]]" modified="20211209095140921" title="$:/StoryList">
+<div created="20211211122019574" list="Hello [[Current and Recent Work]] [[Selected Works]] [[Site updates]]" modified="20211211122019574" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -14883,18 +14883,105 @@ The idea of chance not only alludes to John Cage and his idea that ‘everything
 
 </pre>
 </div>
-<div created="20211203105617490" modified="20211203110146154" tags="Talks care [[Current and Recent Work]]" title="SEPALS conference">
-<pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/SEPALS_Save_the_Date_Promo_2021.png]]
+<div created="20211203105617490" modified="20211211122955226" tags="Talks care [[Current and Recent Work]]" title="SEPALS conference">
+<pre>I presented a talk on how we move from activism to a beyond of activism to imagine new methodologies or ways of experimenting to create a new arts ecology.
 
-''S: E: P: A: L: S: An Intersectional Approach to Care and Safety'' is a half day event and future publication that takes a more focused understanding of how we can use care and safety in a more diverse way within curating, institutional decision making, commissioning and education. All these areas have an impact on how we engage with each other and comprehend the cultural field. The event will consist of guest speakers and some members of the S: E: P: A: L: S Group who will tackle the ideas of care and safety in different ways.
+[[Read the text of my talk here|https://docs.google.com/document/d/1x5ZIX8KHUTQ1m1vPat77z49Ma56kxlg5LnkjoKM6XfA/edit?usp=sharing]]
 
-''Jack Ky Tan'' will consider what can happen beyond activism towards building a different ecosystem, also imagine the legal and governance shifts we might need for this. ''Lauren Craig'' will look deeper into her conceptual modality S: E: P: A: L: S; an approach for protective and regenerative production.
+------
 
-Afro-Carib curator ''Helen Starr'' and Afro-Somali artist ''Salma Noor'' will present an interactive multiplayer virtual world. In a futuristic desert world, which houses a golden breathing app, this wellbeing experience challenges Western notions of artistic practice. Created with advice from Indian breath specialist and neurologist Dr. Ash Ranpura, they will present It was a Roadside Picnic (Beyond Black Orientalism)-the World as a futuristic re-imagination, existing in Time and Zones that Spring from and Move in Breath (2021) from the imaginary of Salam Noor (SOM/UK), joined by Megan Broadmeadow (WLS/UK), Brandon Covington Sam Sumana (USA), Nicholas Delap (IND/UK), Ben Hall (ENG/SCO), Nayu Kim (KOR), (Kinnari Saraiya (IND) and framed and held in love and longing by Amrita Dhallu (IND/UK) and Helen Starr (TT).
+[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/SEPALS_Save_the_Date_Promo_2021.png]]
 
-''Janina Francois'' 'Rest as Reparations' will explore the idea of 'rest' as an embodied act within cultural institutions to critique historical and contemporary notions of un/productivity, also to normalise idleness or 'not doing' as racialised and gendered care work. It will explore what care looks like for marginalised practitioners working with cultural institutions and how can we imagine life without cultural institutions? Finally, art psychotherapist, ''Georgina Obaya Evans'' will hold a shared space for reflection, transformation and creative self-enquiry. 
+About this event
+Hosted by the S: E: P: A: L: S Group and the British Art Network.
 
-The S: E: P: A: L: S Group was initiated by Jack Ky Tan, Helen Starr, Pauline de Souza, Salma Noor, Lauren Craig, Lisa Kennedy, Janine Francois and Racha Bouhouche.</pre>
+S: E: P: A: L: S: An Intersectional Approach to Care and Safety half-day event is a digital garden and future publication that aims to generate a focused understanding of how we can use care and safety in more diverse ways within curating, institutional decision making, commissioning and education. All of these areas impact how we engage with each other and comprehend cultural fields. The event will consist of guest speakers and some members of the S: E: P: A: L: S Group who will tackle the ideas of care and safety in different ways.
+
+9:30 am- Housekeeping
+
+9:45 am- Lauren Craig
+
+10:15 am- Helen Starr and Salma Noor
+
+11:00 - 11:10 am - Break
+
+11:10 am- Jack Ky Tan
+
+11:55 am- Janine Francois
+
+12:40 - 12:50 am - Break
+
+12:50 pm- Closing Thoughts by Pauline de Souza.
+
+COMPOSTING with Georgina Obaya Evans:
+
+10:40 am-11:35 am- Session 1 (1 to 1) *
+
+11:45- 12:30 pm- Session 2 (small group- 12 maximum)*
+
+Please book tickets for COMPOSTING using this link: https://www.eventbrite.co.uk/e/sepals-compost-with-georgina-obaya-evans-tickets-216272014417
+
+=========================================================
+
+Description of Activities:
+
+''Lauren Craig'' will look deeper into her conceptual modality S: E: P: A: L: S; an approach for protective knowledge production and ethical cultural memory.
+
+''Jack Ky Tan'' will envision a different ecosystem that considers what can happen beyond activism. He will also explore some of the legal and governance shifts we might need for this.
+
+Afro-Carib curator ''Helen Starr'' and Afro-Somali artist ''Salma Noor'' will present an interactive mulitplayer virtual world. In a futuristic desert, which houses a golden breathing app, a wellbeing experience challenges Western notions of artistic practice. Created with guidance from Indian breath specialist and neurologist ''Dr. Ash Ranpura'', Starr and Noor will present It was a Roadside Picnic (Beyond Black Orientalism)-the World as a futuristic re-imagination, existing in Time and Zones that spring from and Move in Breath (2021). This virtual world is from Noor's imaginary. Noor is joined by artists and cultural producers Megan Broadmeadow (WLS/UK), Brandon Covington Sam-Sumana (USA), Nicholas Delap (WLS/UK), Ben Hall (ENG/SCO), Nayu Kim (KOR), Kinnari Saralya (IND). It is framed and held in love and longing by Amrita Dhallu (IND/UK) and Starr (TT).
+
+''Janine Francois''' Rest as Reparations will explore the idea of 'rest' as an embodied act within cultural institutions to critique historical and contemporary notions of un/productivity also to normalise idleness or 'not doing' as racialised and gendered care work. Francois will explore what care looks like for marginalised practitioners working with cultural institutions and how we can imagine life without them.
+
+Finally, art psychotherapist, ''Georgina Obaya Evans'' will hold a shared space for reflection, transformation and creative self-enquiry.
+
+The S: E: P: A: L: S Group was initiated by Racha Bouhouche, Lauren Craig, Pauline de Souza, Janine Francois, Lisa Kennedy, Salma Noor, Helen Starr and Jack Ky Tan.
+
+==============================================================
+
+Biographies.
+
+''Lauren Craig'' is a London-based cultural futurist. Her practice as an artist, co-curator, full-spectrum doula and celebrant is untethered, sprawling and liberatory. Carefully marrying concept with materiality, she moves slowly between performance, installation, experimental art writing, exhibition making, moving image, research and photography. Her auto-ethnographic works are meditations on celebration, commemoration and tribute. Through archival research and socialisation, she centres on lived experience while striking through and reframing past and present dominant narratives. She offers her creativity as calls to action to create ethical, cultural memory and collective intelligence. Her work is an invitation to convene, proposition and create our futurities.
+
+''Jack Ky Tan'' makes work that explores the connection between social, legal and art. Using social relations and cultural norms as material, he creates works of visual, performance and participatory art that highlights the rules-customs, rituals, habits and theories-that guide human behaviour. Jack's social practice also blurs the boundaries between art, governance and consultancy in order to help organisations reform and revision themselves using artistic thinking.
+
+Prior to becoming an artist, Jack graduated from Hull University Law School, completed an MA in Social Justice and Education at UCL, worked in commercial litigation, trained as a lawyer, and undertook human rights casework and anti-racist campaigning. He then studied ceramics, obtaining a BA from the University of Westminster and an MA from the Royal College of Art. Jack also holds a PhD in legal aesthetics and performance at the University of Roehampton, Dept. of Drama, Theatre and Performance.
+
+As an artist-curator, Jack has curated exhibitions for the ICA London, Wiltshire Creative, the Salisbury International Arts Festival, Royal College of Art, arebyte Gallery (London) and Lewisham Arthouse. He has also taught sculpture at the Royal College of Art and University of Brighton and politics at Goldsmiths.
+
+''Helen Starr'' is a Trinidadian world-building curator. Of Afro-Carib (1) ancestry, Helen's indigenous and black lived experience is entangled with both racism and genocidal erasure. Helen is interested in the formulation of how European people came to see themselves as the gatekeepers to the Personhood of Others. How Earth became a colony of the West.
+
+Helen has commissioned, curated and produced world-building artworks such as:
+
+Life Without Matter (2018) by Rebecca Allen, Warm Worlds and Otherwise (2018-20) by Anna Bunting-Branch and Aliyah Hussain, Hunting Along side our Shadows (2021) by Danielle Brathwaite-Shirley and It was an Aliens' Picnic (Beyond Black Orientalism) -the World as a futuristic re-imagination, existing in Time and Zones that Spring from Move in Breath (2021) from the imagery of Salma Noor, joined by Megan Broadmeadow, Brandon Covington Sam Sumana, Nicholas Delap, Ben Hall, Nayu Kim, Salma Noor, Kinnari Saraiya and framed and held in love and longing by Amrita Dhallu and Helen Starr.
+
+In 2019 three trans-altern friends Amrita Dhallu, Salma Noor and Helen Starr sang Daad Futurism into being. Daad Futurism's non-geographical way of thinking allows for the move (2) on to the 'demonic' and now unsilencing trans-&quot;isms&quot; ground of Caliban's woman. This terrain, when fully occupied with be that of a new science of human discourse, of human &quot;life&quot; beyond the &quot;master discourse&quot; of our governing &quot;privileged text&quot; , and it's sub/versions. Beyond Miranda's Meanings. Sylvia Wynter. (1990).
+
+1. Caliban being an anagram of the Spanish word canibal (Carib people), the source of cannibal in English. The character may be seen as a satire on &quot;Noble cannibal&quot; from Montaigne's Essays.
+
+2. Afterward; Beyond Miranda's Meanings: Un/Silencing the 'Demonic Ground&quot; of Caliban 's Woman&quot; Sylvia Wynter (page 366), copyright African World Press, Inc 1990.
+
+http://www.themechatroniclibrary.com/about.html
+
+''Dr. Ash Ranpura'' is a neuroscientist and clinical neurologist who has been active in brain research for over 25 years. He received his bachelor's degree from Yale University, his MD from the Medical College of Ohio, carried out PhD research at the Institute of Cognitive Neuroscience in Queen Square, London, and completed his residency in clinical neurology at the Yale-New Haven Hospital. He is a sought-after public speaker and has been a writer and a host on radio programmes for BBC Radio 4, National Public Radio, and Audible.com. He has recently co-authored a book on mindfulness and neuroscience with Ruby Wax and Gelong Thubten entitled How to be Human: The Manual.
+
+''Salma Noor'''s art multimedia practice includes the use of digital platforms to interrogate the structures of power that we inhabit and those which inhabit us. She splices historical imagery, often sourced from familial archives, into GIFs, computer animated collages and immersive installations. Noor is the co-founder of Daad Futurism with Amrita Dhallu and Helen Starr and was both a member and in-house designer of the Radical Womxn Dance Party-a Liverpool collective which organised events as a form of protest to bring awareness to the struggles of womxn in ant-capitalist movements.
+
+Her work was part of you feel me_ exhibition, (https://www.instagram.com/p/B55Jg8DAVXd/), at FACT, Liverpool for which Salma designed the entire visual identity. She was also a contributing designer for Khabar Kesian's fourth issue: Edge. Salma was commissioned to produce augmented animations for Redistributing Power: The Art Market is Structured like a Plantation (https://fotam.creativeunited.org.uk/redistributing-power/ ), an event organised by Creative United and eyelects Cyborg(etics) to Misdemeanor (https://wysingbroadcasts.art/discover/cyborg-etics-to-misdemeanor) are part of Wysing Broadcast series.
+
+Salma is currently a resident in PIVOT; Bluecoat and Castlefield Galleries' joint, inaugural artist development programme.
+
+''Janine Francois'' [they/them/theirs] is a Black British Feminist, critic and writer, who is known for their insightful, but critical piercing perspectives on race and social justice. Janine's practices deconstruct whiteness (and race) within cultural and academic institutions, by way writing, curating/producing, research, teaching and consultancy. Janine's career began as a Youth Arts Manager and Educator where they helped establish the Threads Fashion Project, a successful youth arts project for young women aged 10-18 in Hackney Museum, London College of Fashion, Victoria &amp; Albert Museum, Design Museum and the National Archive amongst many others large and small cultural partners to deliver high impact youth-creative projects.
+
+Janine is now Course Leader for the undergraduate course BA Culture, Criticism and Curation at Central St. Martins and has set up the University of the Arts London first Hip-Hop culture modules. As well as establishing the Royal College of Art's first-ever Hip-Hop Studies reading group as a Visiting Lecturer.
+
+''Georgina Obaya Evans''' work examines notions of 'self' and reflects on how we make meaning and find healing through interactions of the expressive body, creative arts and psychological therapies.
+
+Her professional practices of visual art, art psychotherapy and yoga therapy are rooted in theories and practices of creative self-enquiry. Through these interdisciplinary portals, relationships can also be explored as the route to healing trauma in self and other(s).
+
+Georgina has extensive experience in holding safe spaces for individuals and groups to engage in personal and group enquiry. Through embodied creative expression and 'dialogues of difference', she facilitates consideration of ways in which identities and social relationships are shaped by psycho-sociocultural dynamics as well as conscious and unconscious influences.
+
+Georgina currently works as a psychotherapist in NHS community mental health services with trauma survivors, and with young people in higher education. She has lectured on undergraduate psychology and professional art therapy training courses at Roehampton University and Goldsmith College. She has taught fine art students at Chelsea School of Art and facilitated public dialogues exploring cultural heritage, identity and difference, as part of Iniva's Creative Learning Programme in partnership with A Space.</pre>
 </div>
 <div created="20211028161734597" modified="20211028191113987" tags="[[Karaoke Court]]" title="Siraj -v- Olivia">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Karaoke%20Court%20Singapore%20-%20Siraj-v-Olivia%2016.jpg?raw=true]]
