--- a/index.html
+++ b/index.html
@@ -11227,8 +11227,9 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 &lt;/$reveal&gt;
 &lt;/div&gt;</pre>
 </div>
-<div bag="default" created="20200106211749103" modified="20211203105639693" revision="0" title="$:/DefaultTiddlers" type="text/vnd.tiddlywiki">
-<pre>[[Hello]]
+<div bag="default" created="20200106211749103" modified="20220208162101446" revision="0" title="$:/DefaultTiddlers" type="text/vnd.tiddlywiki">
+<pre>[[Sample artist contract]]
+[[Hello]]
 [[Current and Recent Work]]
 [[Selected Works]]
 [[Site updates]]</pre>
@@ -13079,7 +13080,7 @@ exports.context = contextWidget;
 <div created="20210927072623264" modified="20210927072642624" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
-<div created="20210925061535835" modified="20211203083446642" title="$:/state/tab-1749438307">
+<div created="20210925061535835" modified="20220208162044597" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20210925061539666" modified="20210925061539666" title="$:/state/tab-2065006209">
@@ -13088,7 +13089,7 @@ exports.context = contextWidget;
 <div created="20211028130527432" modified="20211028151842837" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20210925062958213" modified="20220208155602512" title="$:/state/tab/sidebar--595412856">
+<div created="20210925062958213" modified="20220208162119764" title="$:/state/tab/sidebar--595412856">
 <pre>TableOfContents</pre>
 </div>
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -13217,7 +13218,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220208152306402" list="Hello [[Current and Recent Work]] [[Selected Works]] [[Site updates]]" modified="20220208155551357" title="$:/StoryList">
+<div created="20220208162029550" list="Hello [[Current and Recent Work]] [[Selected Works]] [[Site updates]]" modified="20220208162113941" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
