--- a/index.html
+++ b/index.html
@@ -367,6 +367,8 @@ Error message and password prompt
 
 <li>$:/state/toc/TableOfContents-Performance Art--118161433</li>
 
+<li>$:/state/toc/TableOfContents-Reading group--118161433</li>
+
 <li>$:/state/toc/TableOfContents-Research--118161433</li>
 
 <li>$:/state/toc/TableOfContents-Residencies--118161433</li>
@@ -408,6 +410,8 @@ Error message and password prompt
 <li>$:/state/toc/TableOfContents/Current Projects-Global Ethnic Majorities Board Association--118161433</li>
 
 <li>$:/state/toc/TableOfContents/People who haunt me-Jack Halberstam--118161433</li>
+
+<li>$:/state/toc/TableOfContents/Resources-artist resources--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Resources-trustee resources--118161433</li>
 
@@ -452,6 +456,8 @@ Error message and password prompt
 <li>13 May 2021 GEMBA Meeting</li>
 
 <li>2021</li>
+
+<li>26 Oct 2021 GEMBA Meeting</li>
 
 <li>31 Mar 2021 GEMBA Meeting</li>
 
@@ -605,8 +611,6 @@ Error message and password prompt
 
 <li>Score From Guantanamo</li>
 
-<li>Sculpture</li>
-
 <li>Selected Works</li>
 
 <li>SEPALS conference</li>
@@ -620,8 +624,6 @@ Error message and password prompt
 <li>space</li>
 
 <li>Stefano Harney on Governance</li>
-
-<li>Sylvia Wynter</li>
 
 <li>TableOfContents</li>
 
@@ -13086,7 +13088,7 @@ exports.context = contextWidget;
 <div created="20211028130527432" modified="20211028151842837" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20210925062958213" modified="20220218072950290" title="$:/state/tab/sidebar--595412856">
+<div created="20210925062958213" modified="20220218174219677" title="$:/state/tab/sidebar--595412856">
 <pre>TableOfContents</pre>
 </div>
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -13098,10 +13100,10 @@ exports.context = contextWidget;
 <div created="20210925122403466" modified="20211214094444336" title="$:/state/toc/TableOfContents-Concepts--118161433">
 <pre>close</pre>
 </div>
-<div created="20210926083300728" modified="20211203103903770" title="$:/state/toc/TableOfContents-Curating--118161433">
+<div created="20210926083300728" modified="20220218174233246" title="$:/state/toc/TableOfContents-Curating--118161433">
 <pre>close</pre>
 </div>
-<div created="20211203110358830" modified="20211209095450768" title="$:/state/toc/TableOfContents-Current and Recent Work--118161433">
+<div created="20211203110358830" modified="20220218174510419" title="$:/state/toc/TableOfContents-Current and Recent Work--118161433">
 <pre>close</pre>
 </div>
 <div created="20210926064611805" modified="20211203104743036" title="$:/state/toc/TableOfContents-Current Projects--118161433">
@@ -13116,31 +13118,34 @@ exports.context = contextWidget;
 <div created="20210927073606510" modified="20210927074104780" title="$:/state/toc/TableOfContents-Journal--118161433">
 <pre>close</pre>
 </div>
-<div created="20210926064608845" modified="20220208152440624" title="$:/state/toc/TableOfContents-Organisational Practice--118161433">
+<div created="20210926064608845" modified="20220218174241909" title="$:/state/toc/TableOfContents-Organisational Practice--118161433">
 <pre>close</pre>
 </div>
-<div created="20211203103217012" modified="20211209080320072" title="$:/state/toc/TableOfContents-People who haunt me--118161433">
+<div created="20211203103217012" modified="20220218174444827" title="$:/state/toc/TableOfContents-People who haunt me--118161433">
 <pre>close</pre>
 </div>
 <div created="20210929044046973" modified="20211203103126956" title="$:/state/toc/TableOfContents-People--118161433">
 <pre>close</pre>
 </div>
-<div created="20210925131353072" modified="20211203103125396" title="$:/state/toc/TableOfContents-Performance Art--118161433">
+<div created="20210925131353072" modified="20220218174249629" title="$:/state/toc/TableOfContents-Performance Art--118161433">
 <pre>close</pre>
 </div>
-<div created="20210926081024149" modified="20211005145900852" title="$:/state/toc/TableOfContents-Research--118161433">
+<div created="20220218174250478" modified="20220218174312757" title="$:/state/toc/TableOfContents-Reading group--118161433">
+<pre>open</pre>
+</div>
+<div created="20210926081024149" modified="20220218174341124" title="$:/state/toc/TableOfContents-Research--118161433">
 <pre>close</pre>
 </div>
-<div created="20211005145901891" modified="20211203104007287" title="$:/state/toc/TableOfContents-Residencies--118161433">
+<div created="20211005145901891" modified="20220218174347164" title="$:/state/toc/TableOfContents-Residencies--118161433">
 <pre>close</pre>
 </div>
-<div created="20211203083716975" modified="20220208155604248" title="$:/state/toc/TableOfContents-Resources--118161433">
+<div created="20211203083716975" modified="20220218174359716" title="$:/state/toc/TableOfContents-Resources--118161433">
 <pre>close</pre>
 </div>
-<div created="20210926053815363" modified="20211005145940195" title="$:/state/toc/TableOfContents-Sculpture--118161433">
+<div created="20210926053815363" modified="20220218174407788" title="$:/state/toc/TableOfContents-Sculpture--118161433">
 <pre>close</pre>
 </div>
-<div created="20210925104810836" modified="20211203131227406" title="$:/state/toc/TableOfContents-Selected Works--118161433">
+<div created="20210925104810836" modified="20220218174503859" title="$:/state/toc/TableOfContents-Selected Works--118161433">
 <pre>close</pre>
 </div>
 <div created="20210925130341602" modified="20220208152148249" title="$:/state/toc/TableOfContents-Social Practice--118161433">
@@ -13191,7 +13196,10 @@ exports.context = contextWidget;
 <div created="20211209074628957" modified="20211209074636517" title="$:/state/toc/TableOfContents/People who haunt me-Jack Halberstam--118161433">
 <pre>open</pre>
 </div>
-<div created="20211203103956856" modified="20211203103958232" title="$:/state/toc/TableOfContents/Resources-trustee resources--118161433">
+<div created="20220218174354532" modified="20220218174355444" title="$:/state/toc/TableOfContents/Resources-artist resources--118161433">
+<pre>close</pre>
+</div>
+<div created="20211203103956856" modified="20220218174359044" title="$:/state/toc/TableOfContents/Resources-trustee resources--118161433">
 <pre>close</pre>
 </div>
 <div created="20211203083719087" modified="20211203083720167" title="$:/state/toc/TableOfContents/Resources-trustee--118161433">
@@ -13218,7 +13226,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220218072934702" list="[[Writing and press about my work]] Hello [[Current and Recent Work]] [[Selected Works]] [[Site updates]]" modified="20220218073126867" title="$:/StoryList">
+<div created="20220218172914554" list="[[Global Ethnic Majorities Board Association]] Hello [[Current and Recent Work]] [[Selected Works]] [[Site updates]]" modified="20220218174408548" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13354,8 +13362,8 @@ exports.context = contextWidget;
 <div bag="default" created="20200127165334843" modified="20200808142340054" revision="0" tags="$:/giffmex/stroll" title="$:/view" type="text/vnd.tiddlywiki">
 <pre>classic</pre>
 </div>
-<div created="20210925130108545" modified="20211005145215785" tags="[[Global Ethnic Majorities Board Association]]" title="13 May 2021 GEMBA Meeting">
-<pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Jade%20Montserrat_ecclesiastes-1250x560-1.jpg?raw=true]]
+<div created="20210925130108545" modified="20220218174125344" tags="[[Global Ethnic Majorities Board Association]]" title="13 May 2021 GEMBA Meeting">
+<pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/GEMBA_amy-feet.png]]
 
 
 ''13 May 2021
@@ -13377,11 +13385,33 @@ Image:   FEELFEELFEEL: Amy Lawrence: Screenshot: FEELFEEL 2/3: Video:Commissione
 <div created="20211214093425330" modified="20211214093443411" tags="[[Projects by year]]" title="2021">
 <pre></pre>
 </div>
-<div created="20210925125809993" modified="20211005145243178" tags="[[Global Ethnic Majorities Board Association]]" title="31 Mar 2021 GEMBA Meeting">
-<pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Jade%20Montserrat_ecclesiastes-1250x560-1.jpg?raw=true]]
+<div created="20220218173252662" modified="20220218174101473" tags="[[Global Ethnic Majorities Board Association]]" title="26 Oct 2021 GEMBA Meeting">
+<pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/WYWY_GSylvaindeleu_Art14_Jack_Tan_50_smudged_16-9.jpg]]
+
+
+''26 October 2021
+&lt;br&gt;[[Global Ethnic Majorities Board Association]] – Third Meeting''
+
+Calling all Black and Global Ethnic Majorities people (GEM) who are Board members or trustees in UK arts and culture organisations. More than ever, creating solidarity among Black and Global Ethnic Majorities board members from across the UK is an urgent enterprise. We recognise that the experiences of GEM board members can be isolating, and physically, emotionally and intellectually challenging.
+
+Following our first workshop in March and our second meeting in May 2021, we invite you to our third meeting which will be an informal space to share stories, resources and to offer peer support.
+
+To join us, please sign up and a zoom link will be sent to you on the day. You will be asked to declare that you are a GEM person and are in, have been in, or are about to join a board.
+
+Join our mailing list [[here|https://be91f51d.sibforms.com/serve/MUIEANwuvTG0AjQxdubVXbT-BhKhvkCwjMNwQJCK3v92iGuCI8Iw98t1EZN9ftkKXj6E4SwljTVjMMv3FtbevyOaYu-8igiPItth5VHidU9vak8s7yTpywm9VCX4UKjwFsgqWtrrn0XyPHJGA6IMFDJjBRQl_NaUEOPhPsXDzaBipK2nLoXtxKgJMAYzvDzz9Ajpq2dkte6tyoF9]] to stay in touch and receive updates.
+
+You can contact us at: gemba82.6@gmail.com
+
+Notes: GEMBA arose out of preparatory discussions for Jade Montserrat’s public conversation “[[Act 2: Scoring Performance|https://iniva.org/programme/events/act-2-scoring-performance/]]” with Amy Lawrence and Jack Tan
+
+Image: Jack Tan (2014), Will You Won’t You, performance inspired by the politics of dressage and the cakewalk, co-choreographed with participants for the London Art 14’s performance programme curated by Amanprit Sandhu. Photo: Sylvain Deleu</pre>
+</div>
+<div created="20210925125809993" modified="20220218174159759" tags="[[Global Ethnic Majorities Board Association]]" title="31 Mar 2021 GEMBA Meeting">
+<pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/Decision-pong_057.jpg]]
 
 ''&lt;br&gt;31 Mar 2021
-&lt;br&gt;[[Global Ethnic Majorities Board Association]] - A workshop with Jack Tan, Jade Montserrat and Amy Lawrence''
+&lt;br&gt;[[Global Ethnic Majorities Board Association]] - First Meeting
+&lt;br&gt;A workshop with Jack Tan, Jade Montserrat and Amy Lawrence''
 
 Calling all Black and Global Ethnic Majorities people (GEM) who are Board members or trustees in UK arts and culture organisations. The initiating group (Amy Lawrence, Jade Montserrat and Jack Tan) invite you to join a workshop to share insights, experiences and knowledge in order to determine whether there is a need to create a GEM Board Association or similar. 
 
@@ -14030,7 +14060,7 @@ Before you start storing important information in Stroll, it is vital to make su
 See the [[control panel|$:/ControlPanel]] for more options.
 </pre>
 </div>
-<div created="20210925123949321" modified="20211203125932278" tags="[[Social Practice]] [[Current and Recent Work]] [[Organisational Practice]]" title="Global Ethnic Majorities Board Association">
+<div created="20210925123949321" modified="20220218174729491" tags="[[Social Practice]] [[Current and Recent Work]] [[Organisational Practice]]" title="Global Ethnic Majorities Board Association">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Jade%20Montserrat_ecclesiastes-1250x560-1.jpg?raw=true]]
 
 Out of preparations for an [[In conversation with Jade Montserrat, Amy Lawrence and Jack Tan]], the idea for a Global Ethnic Majorities Board Association (GEMBA) was born. The aim was to create a confidential and supportive meeting space where global ethnic majority trustees on UK visual arts boards could meet and share knowledge. 
@@ -14040,13 +14070,13 @@ This extract from our [[first call out|https://iniva.org/programme/events/global
 &lt;&lt;&lt;
 More than ever, creating solidarity among Black and Global Ethnic Majorities board members from across the UK is an urgent enterprise. They recognise that the experience of GEM board members can be isolating, and physically, emotionally and intellectually challenging. Reports of being gaslit, invisibile-ized and objectified are not uncommon, and they would welcome fellow GEM board members to come together to strategise and collectivise. 
 &lt;&lt;&lt;
+&lt;br&gt;
 
+!!! List of GEMBA meetings to date:
 
-!! List of GEMBA meetings to date:
-
-[[31 Mar 2021 GEMBA Meeting]]
-
-[[13 May 2021 GEMBA Meeting]]</pre>
+*[[31 Mar 2021 GEMBA Meeting]]
+*[[13 May 2021 GEMBA Meeting]]
+*[[26 Oct 2021 GEMBA Meeting]]</pre>
 </div>
 <div created="20210925110057227" modified="20211005145530758" tags="[[Selected Works]] [[Installation Art]] [[Performance Art]]" title="Hearings">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Hearings_mg_1290.jpg?raw=true]]
@@ -14934,9 +14964,6 @@ The player picks a card from each suit and combined, they tell the player what t
 
 The idea of chance not only alludes to John Cage and his idea that ‘everything is music’ and in this case for me ‘everything is art’. But it also refers to lived reality of how people (particularly Black and Asian men) are vicitmised and incarcerated randomly and arbitrarily, and how through preemptive law enforcement and the doctrine of the State of Exception, the human right to freedom the rule of law is being compromised.”</pre>
 </div>
-<div created="20210925122008875" modified="20210925122009924" tags="TableOfContents" title="Sculpture">
-<pre></pre>
-</div>
 <div created="20210925104505726" modified="20211203131026317" tags="TableOfContents" title="Selected Works">
 <pre>Some selected works that show an example of a range of my art practice:  artworks, curating, writing and social practice.
 
@@ -15166,9 +15193,6 @@ Unfortunately that is the moment when that becomes visible and becomes tangible 
 
 
 </pre>
-</div>
-<div created="20211209074658886" modified="20211209074725062" tags="[[Reading group]] [[People who haunt me]]" title="Sylvia Wynter">
-<pre>To be completed.</pre>
 </div>
 <div caption="Contents" created="20210925093547619" list-after="$:/core/ui/SideBar/Open" modified="20210925113726647" tags="$:/tags/SideBar" title="TableOfContents">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
